Fixed overflow weirdness

--- a/styles/style.css
+++ b/styles/style.css
@@ -24,10 +24,15 @@
 
 /* general styles */
 
+html {
+    overflow-x: clip;
+}
+
 body {
     background-color: var(--background);
     color: var(--text);
     overflow-x: clip;
+    position: relative;
 }
 
 a {
@@ -51,7 +56,6 @@ a {
     display: flex;
     flex-direction: column;
     gap: 3rem;
-    overflow-y: clip;
 }
 
 header {
